messing with the header as an introduction to the page.

--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -2,3 +2,7 @@
     margin: 0;
     padding: 0;
 }
+.App-header{
+    background: url('./ian-keefe.jpg') center no-repeat;
+    background-size: cover;
+}
