--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -2,4 +2,9 @@
   margin: 0;
   padding: 0;
 }
+
+.App-header {
+  background: url("./ian-keefe.jpg") center no-repeat;
+  background-size: cover;
+}
 /*# sourceMappingURL=my.css.map */
