Setting up Css Grid so I can have a hover effect and then an add to cart bucket button that responds when clicked.

--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -7,4 +7,10 @@
   background: url("./ian-keefe.jpg") center no-repeat;
   background-size: cover;
 }
+
+.App-intro {
+  height: 100vh;
+  display: -ms-grid;
+  display: grid;
+}
 /*# sourceMappingURL=my.css.map */
