--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -6,3 +6,11 @@
     background: url('./ian-keefe.jpg') center no-repeat;
     background-size: cover;
 }
+.App-intro{
+    height:100vh;
+    display:grid;
+    
+}
+.App-intro ol li {
+
+}
