Setting up Css Grid so I can have a hover effect and then an add to cart bucket button that responds when clicked.

--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -10,7 +10,20 @@
 
 .App-intro {
   height: 100vh;
+  background-color: whitesmoke;
+}
+
+.orders {
   display: -ms-grid;
   display: grid;
+  text-decoration: none;
+  list-style: none;
+  -ms-grid-rows: 3rem;
+      grid-template-rows: 3rem;
+  grid-gap: 2rem;
+}
+
+.orders li {
+  padding: 1em;
 }
 /*# sourceMappingURL=my.css.map */
