--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -28,7 +28,7 @@ $Csucess:hsl(104, 73%, 29%);
 }
 .App-intro{
     height:100vh;
-    background-color:grayscale($color: #000000);
+    background: $Scolor
 }
 .orders{
     display: grid;
@@ -36,7 +36,30 @@ $Csucess:hsl(104, 73%, 29%);
     list-style: none;
     grid-template-rows: 3rem;
     grid-gap: 2rem;
+        li{
+         padding: 1em;
+         padding: 3px; 
+         border-radius: 1px; 
+        color: rgba(107,54,62,0.9); 
+        background-color: rgba(107,54,62,0.1);
+        -webkit-transition: all 0.15s ease; 
+        -moz-transition: all 0.15s ease; 
+        transition: all 0.15s ease;
+        background-size: 100% 200%; 
+        background-position: 0 -100%; 
+        background-image: linear-gradient(to top, transparent 50%, rgba(107,54,62,0.9) 50%);
+
+        }
+        li:hover{
+            opacity: .8;
+            color: #fff; 
+            background-position: 0 0; 
+        }
 }
-.orders li{
-    padding: 1em;
+.mainCart {
+    display:flex;
+    position: relative;   
+    background: $Scolor;
+    border: solid black 1px;
+
 }
