--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -25,41 +25,53 @@ $Csucess:hsl(104, 73%, 29%);
 .App-header{
     background: url('./ian-keefe.jpg') center no-repeat;
     background-size: cover;
+    .title {
+        font-size:4rem;
+        margin-bottom: 5rem;
+        line-height: 1.5rem;
+    }
 }
 .App-intro{
     height:100vh;
-    background: $Scolor
-}
-.orders{ 
-    display: grid;
-    text-decoration: none;
-    list-style: none;
-    grid-template-rows: 3rem;
-    grid-gap: 2rem;
-        li{
-         padding: 1em;
-         padding: 3px; 
-         border-radius: 1px; 
-        color: rgba(107,54,62,0.9); 
-        background-color: rgba(107,54,62,0.1);
-        -webkit-transition: all 0.15s ease; 
-        -moz-transition: all 0.15s ease; 
-        transition: all 0.15s ease;
-        background-size: 100% 200%; 
-        background-position: 0 -100%; 
-        background-image: linear-gradient(to top, transparent 50%, rgba(107,54,62,0.9) 50%);
+    background: $Scolor;
 
+    .itemsShelf {
+
+    
+        .orders { 
+            display: grid;
+            height: 100vh;
+            text-decoration: none;
+            list-style: none;
+            grid-auto-rows: 40px;
+            grid-gap: 2rem;
+                li{
+                padding: 1em;
+                padding: 3px; 
+                border-radius: 1px; 
+                color: rgba(107,54,62,0.9); 
+                background-color: rgba(107,54,62,0.1);
+                -webkit-transition: all 0.15s ease; 
+                -moz-transition: all 0.15s ease; 
+                transition: all 0.15s ease;
+                background-size: 100% 200%; 
+                background-position: 0 -100%; 
+                background-image: linear-gradient(to top, transparent 50%, rgba(107,54,62,0.9) 50%);
+
+                }
+                li:hover{
+                    opacity: .8;
+                    color: #fff; 
+                    background-position: 0 0; 
+                }
         }
-        li:hover{
-            opacity: .8;
-            color: #fff; 
-            background-position: 0 0; 
-        }
+    }
 }
 .mainCart {
     display:flex;
     position: relative;   
     background: $Scolor;
     border: solid black 1px;
+    list-style: none;
 
 }
