--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -10,6 +10,8 @@ $P2color:	hsl(0, 0%, 98%);
 
 $P3color: hsl(0, 0%, 94%);
 
+$G1color: hsl(0, 1%, 54%);
+
 $Scolor: hsl(15, 17%, 59%);
 
 $Tcolor: hsl(35, 73%, 26%);
@@ -48,14 +50,19 @@ $Csucess:hsl(104, 73%, 29%);
             text-decoration: none;
             list-style: none;
             grid-auto-rows: 40px;
+            grid-template-columns: 40px 1fr 1fr 1fr 40px;
             grid-gap: 2rem;
+            text-align: left;
 
             .button {
                 background-color: $Csucess;
+                position: absolute;
+                right:0%;
                 border: none;
-                color: white;
-                padding: 16px 32px;
+                color: $P2color;
+                padding: 8px 8px;
                 text-align: center;
+                justify-content: start;
                 text-decoration: none;
                 display: inline-block;
                 font-size: 16px;
@@ -65,17 +72,18 @@ $Csucess:hsl(104, 73%, 29%);
                 cursor: pointer;
             }
             .button1 {
-                background-color: white; 
-                color: black; 
+                background-color: $P2color; 
+                color: $G1color; 
                 border: 2px solid $Csucess;
+                justify-content: start;
             }
-            
             .button1:hover {
                 background-color: $Csucess;
-                color: white;
+                color: $P2color;
             }
                 li{
                 padding: 1em;
+                position: relative;
                 padding: 3px; 
                 border-radius: 1px; 
                 color: rgba(107,54,62,0.9); 
@@ -86,7 +94,7 @@ $Csucess:hsl(104, 73%, 29%);
                 background-size: 100% 200%; 
                 background-position: 0 -100%; 
                 background-image: linear-gradient(to top, transparent 50%, $Scolor 50%);
-
+                grid-column: 2/3 span;
                 }
                 li:hover{
                     opacity: .8;
@@ -100,7 +108,7 @@ $Csucess:hsl(104, 73%, 29%);
     display:flex;
     position: relative;   
     background: $Scolor;
-    border: solid black 1px;
+    border: solid $G1color 1px;
     list-style: none;
 
 }
