--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -114,4 +114,195 @@
   text-decoration: none;
   list-style-type: none;
 }
+
+/*---------------------------------------nav/cart/sliderside*/
+.toggleButton {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  height: 24px;
+  width: 30px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  padding: 0;
+  -webkit-box-sizing: border-box;
+          box-sizing: border-box;
+}
+
+.toggleButton :focus {
+  outline: none;
+}
+
+.toggleButtonLine {
+  width: 25px;
+  height: 2px;
+  background: white;
+}
+
+.sideDrawer {
+  height: 100%;
+  background: white;
+  -webkit-box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
+          box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 200px;
+  z-index: 200;
+  -webkit-transform: translatex(-100%);
+          transform: translatex(-100%);
+  -webkit-transition: 0.3s ease-out;
+  transition: 0.3s ease-out;
+}
+
+.sideDrawer.open {
+  -webkit-transform: translateX(0);
+          transform: translateX(0);
+}
+
+.sideDrawer ul {
+  height: 100%;
+  list-style: none;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.sideDrawer li {
+  margin: 0.5rem 0;
+}
+
+.sideDrawer a {
+  -webkit-columns: #552211;
+          columns: #552211;
+  text-decoration: none;
+}
+
+.sideDrawer a:hover,
+.sideDrawer a:active {
+  color: #fa923f;
+}
+
+@media (min-width: 769px) {
+  .sideDrawer {
+    display: none;
+  }
+}
+
+.toolBar {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  background: #521751;
+  height: 3em;
+  z-index: 150;
+}
+
+.toolBarNav {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  height: 100%;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+}
+
+.toolBarLogo {
+  margin-left: 1rem;
+}
+
+.toolBarLogo a {
+  color: white;
+  text-decoration: none;
+  font-size: 2rem;
+}
+
+.spacer {
+  -webkit-box-flex: 1;
+      -ms-flex: 1;
+          flex: 1;
+}
+
+.toolBarNavItems ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.toolBarNavItems li {
+  padding: 0 0.5rem;
+}
+
+.toolBarNavItems a {
+  color: white;
+  text-decoration: none;
+}
+
+.toolBarNavItems a:hover,
+.toolBarNavItems a:active {
+  color: #fa923f;
+}
+
+@media (max-width: 768px) {
+  .toolBarNavItems {
+    display: none;
+  }
+}
+
+@media (max-width: 530px) and (min-width: 340px) {
+  .toolBarLogo a {
+    font-size: 4vw;
+    word-spacing: 1vw;
+    text-align: center;
+  }
+}
+
+@media (max-width: 339px) {
+  .toolBarLogo a {
+    font-size: 4vw;
+    text-align: center;
+  }
+  .toolBar {
+    height: 2em;
+  }
+}
+
+@media (min-width: 769px) {
+  .toolBarToggle {
+    display: none;
+  }
+  .toolBarLogo {
+    margin-left: 0;
+  }
+}
+
+.backdrop {
+  position: fixed;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  background: rgba(0, 0, 0, 0.3);
+  z-index: 100;
+}
 /*# sourceMappingURL=my.css.map */
