Imported the navbar from the old website now going to unify colors and pass through the cart. After that going to separte the cost fromt he object so that it can display it as a different object

--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -12,6 +12,7 @@
   font-size: 4rem;
   margin-bottom: 5rem;
   line-height: 1.5rem;
+  max-width: 290px;
 }
 
 .App-intro {
@@ -29,6 +30,8 @@
   list-style: none;
   text-align: left;
   grid-auto-rows: 40px;
+  -ms-grid-columns: 10px 1fr 1fr 1fr 10px;
+      grid-template-columns: 10px 1fr 1fr 1fr 10px;
   grid-gap: 2rem;
 }
 
@@ -197,7 +200,7 @@
   color: #fa923f;
 }
 
-@media (min-width: 769px) {
+@media (min-width: 4000px) {
   .sideDrawer {
     display: none;
   }
@@ -263,7 +266,7 @@
   color: #fa923f;
 }
 
-@media (max-width: 768px) {
+@media (max-width: 4000px) {
   .toolBarNavItems {
     display: none;
   }
@@ -287,7 +290,7 @@
   }
 }
 
-@media (min-width: 769px) {
+@media (min-width: 4000px) {
   .toolBarToggle {
     display: none;
   }
