--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -280,3 +280,10 @@ $Csucess:hsl(104, 73%, 29%);
     background:rgba(0, 0, 0, 0.3);
     z-index: 100;
 }
+.icon {
+    height:6vh;
+    display:flex;
+    svg{
+        height:4vh;
+    }
+}
