Working on the subTitle.

--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -37,6 +37,11 @@ $Csucess:hsl(104, 73%, 29%);
         line-height: 1.5rem;
         max-width: 290px;
     }
+    .subTitle {
+        margin-top: -4em;
+        font-size: .9em;
+
+    }
 }
 .App-intro{
     background: $P2color;
