--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -15,6 +15,11 @@
   max-width: 290px;
 }
 
+.App-header .subTitle {
+  margin-top: -4em;
+  font-size: .9em;
+}
+
 .App-intro {
   background: #fafafa;
   grid-auto-rows: 40px;
