--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -13,11 +13,13 @@
   margin-bottom: 5rem;
   line-height: 1.5rem;
   max-width: 290px;
+  font-family: 'Cormorant SC',serif;
 }
 
 .App-header .subTitle {
   margin-top: -4em;
   font-size: .9em;
+  font-family: 'Indie Flower', cursive;
 }
 
 .App-intro {
@@ -98,8 +100,7 @@
 }
 
 .mainCart {
-  display: -ms-grid;
-  display: grid;
+  display: none;
   background: #a88e85;
   border: solid #8b8989 1px;
   list-style: none;
@@ -170,9 +171,29 @@
   transition: 0.3s ease-out;
 }
 
+.sideDrawer .itemsShelf {
+  display: none;
+}
+
 .sideDrawer.open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
+}
+
+.sideDrawer.open .itemsShelf {
+  display: none;
+}
+
+.sideDrawer.open .mainCart {
+  display: -ms-grid;
+  display: grid;
+  background: #a88e85;
+  border: solid #8b8989 1px;
+  list-style: none;
+  -ms-grid-columns: 40px 1fr 1fr 1fr 40px;
+      grid-template-columns: 40px 1fr 1fr 1fr 40px;
+  text-decoration: none;
+  list-style-type: none;
 }
 
 .sideDrawer ul {
