--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -36,10 +36,12 @@ $Csucess:hsl(104, 73%, 29%);
         margin-bottom: 5rem;
         line-height: 1.5rem;
         max-width: 290px;
+        font-family:'Cormorant SC',serif;
     }
     .subTitle {
         margin-top: -4em;
         font-size: .9em;
+        font-family:'Indie Flower', cursive;
 
     }
 }
@@ -111,7 +113,7 @@ $Csucess:hsl(104, 73%, 29%);
     }
 }
 .mainCart {
-    display: grid;
+    display: none;
     background: $Scolor;
     border: solid $G1color 1px;
     list-style: none;
@@ -167,10 +169,25 @@ $Csucess:hsl(104, 73%, 29%);
     width:200px;
     z-index: 200;
     transform: translatex(-100%);
-    transition: 0.3s ease-out
+    transition: 0.3s ease-out;
+    .itemsShelf{
+        display:none;
+    }
 }
 .sideDrawer.open {
-    transform: translateX(0)
+    transform: translateX(0);
+    .itemsShelf{
+        display:none;
+    }
+    .mainCart {
+        display:grid;
+        background: $Scolor;
+        border: solid $G1color 1px;
+        list-style: none;
+        grid-template-columns: 40px 1fr 1fr 1fr 40px;
+        text-decoration: none;
+        list-style-type:none;
+    }
 }
 .sideDrawer ul{
     height: 100%;
@@ -294,4 +311,4 @@ $Csucess:hsl(104, 73%, 29%);
         height:4vh;
         color: $P2color;
     }
-}
+};
