--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -166,7 +166,7 @@ $Csucess:hsl(104, 73%, 29%);
     position: fixed;
     top:0;
     left: 0;
-    width:200px;
+    width:240px;
     z-index: 200;
     transform: translatex(-100%);
     transition: 0.3s ease-out;
@@ -179,16 +179,44 @@ $Csucess:hsl(104, 73%, 29%);
     .itemsShelf{
         display:none;
     }
-    .mainCart {
-        display:grid;
-        background: $Scolor;
-        border: solid $G1color 1px;
-        list-style: none;
-        grid-template-columns: 40px 1fr 1fr 1fr 40px;
-        text-decoration: none;
-        list-style-type:none;
+    .Cart{
+        height:100%;
+
+        .mainCart {
+            display: grid;
+            grid-template-columns: 40px 30px 95px 30px 40px;
+            grid-auto-rows: 40px;
+            background: $Scolor;
+            border-bottom: solid black 2px;
+            list-style: none;
+            text-decoration: none;
+            list-style-type:none;
+            justify-content: center;
+            height:100%;
+
+            .titleCart1{
+                grid-column: 1;
+                grid-row: 1;
+                justify-content: center;
+            }
+            .titleCart2{
+                grid-row:2;
+                grid-column: 1/-1;
+                border-bottom: black solid 1px;
+
+            }
+            hr{
+                grid-row: 2;
+                grid-column: 1/-1;
+            }
+            ul{
+                top:20%;
+                grid-row:3;
+                display: relative;
+            }
+            }
+        }
     }
-}
 .sideDrawer ul{
     height: 100%;
     list-style: none;
