Got the top portion under control. now going to set up the list items

--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -230,8 +230,9 @@
 
 .sideDrawer.open .Cart .mainCart ul {
   top: 20%;
-  -ms-grid-row: 3;
-  grid-row: 3;
+  grid-column: 2/-1;
+  -ms-grid-row: 4;
+  grid-row: 4;
   display: relative;
 }
 
