--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -211,7 +211,8 @@ $Csucess:hsl(104, 73%, 29%);
             }
             ul{
                 top:20%;
-                grid-row:3;
+                grid-column: 2/-1;
+                grid-row:4;
                 display: relative;
             }
             }
