--- a/my-app/src/CSS/my.css
+++ b/my-app/src/CSS/my.css
@@ -82,7 +82,7 @@
   position: relative;
   padding: 3px;
   border-radius: 1px;
-  color: rgba(107, 54, 62, 0.9);
+  color: #f0f0f0 107, 54, 62, 0.9;
   background-color: #f0f0f0;
   -webkit-transition: all 0.15s ease;
   transition: all 0.15s ease;
@@ -152,12 +152,12 @@
 .toggleButtonLine {
   width: 25px;
   height: 2px;
-  background: white;
+  background: #fafafa;
 }
 
 .sideDrawer {
   height: 100%;
-  background: white;
+  background: #fafafa;
   -webkit-box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
           box-shadow: 2px 0px 10px rgba(0, 0, 0, 0.5);
   position: fixed;
@@ -193,8 +193,10 @@
   display: grid;
   -ms-grid-columns: 40px 30px 95px 30px 40px;
       grid-template-columns: 40px 30px 95px 30px 40px;
+  -ms-grid-rows: 40px 40px 40px 40px 40px 40px 40px 40px;
+      grid-template-rows: 40px 40px 40px 40px 40px 40px 40px 40px;
   grid-auto-rows: 40px;
-  background: #a88e85;
+  background: #f0f0f0;
   border-bottom: solid black 2px;
   list-style: none;
   text-decoration: none;
@@ -231,9 +233,20 @@
 .sideDrawer.open .Cart .mainCart ul {
   top: 20%;
   grid-column: 2/-1;
-  -ms-grid-row: 4;
-  grid-row: 4;
+  grid-row: 3/-2;
   display: relative;
+}
+
+.sideDrawer.open .Cart .mainCart ul li {
+  grid-column: 2/-1;
+  grid-row: auto;
+}
+
+.sideDrawer.open .Cart .mainCart .purchase {
+  display: relative;
+  -ms-grid-column: 2;
+  grid-column: 2;
+  grid-row: -1;
 }
 
 .sideDrawer ul {
@@ -249,6 +262,7 @@
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  background: #f0f0f0;
 }
 
 .sideDrawer li {
@@ -300,7 +314,7 @@
 }
 
 .toolBarLogo a {
-  color: white;
+  color: #fafafa;
   text-decoration: none;
   font-size: 2rem;
 }
@@ -325,13 +339,13 @@
 }
 
 .toolBarNavItems a {
-  color: white;
+  color: #fafafa;
   text-decoration: none;
 }
 
 .toolBarNavItems a:hover,
 .toolBarNavItems a:active {
-  color: #fa923f;
+  color: #ff9914;
 }
 
 @media (max-width: 4000px) {
