--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -94,7 +94,7 @@ $Csucess:hsl(104, 73%, 29%);
                 position: relative;
                 padding: 3px; 
                 border-radius: 1px; 
-                color: rgba(107,54,62,0.9); 
+                color: $P3color(107,54,62,0.9); 
                 background-color: $P3color;
                 -webkit-transition: all 0.15s ease; 
                 -moz-transition: all 0.15s ease; 
@@ -155,15 +155,15 @@ $Csucess:hsl(104, 73%, 29%);
 .toggleButtonLine {
     width: 25px;
     height: 2px;
-    background: white;
+    background: $P2color;
 }
 
 
 .sideDrawer {
     height:100%;
-    background: white;
+    background: $P2color;
     box-shadow: 2px 0px 10px rgba(0,0,0,0.5);
-    position: fixed;
+    position: fixed; 
     top:0;
     left: 0;
     width:240px;
@@ -185,8 +185,9 @@ $Csucess:hsl(104, 73%, 29%);
         .mainCart {
             display: grid;
             grid-template-columns: 40px 30px 95px 30px 40px;
+            grid-template-rows: 40px 40px 40px 40px 40px 40px 40px 40px;
             grid-auto-rows: 40px;
-            background: $Scolor;
+            background: $P3color;
             border-bottom: solid black 2px;
             list-style: none;
             text-decoration: none;
@@ -212,8 +213,17 @@ $Csucess:hsl(104, 73%, 29%);
             ul{
                 top:20%;
                 grid-column: 2/-1;
-                grid-row:4;
+                grid-row:3/-2;
                 display: relative;
+            li{
+                grid-column: 2/-1;
+                grid-row: auto;
+            }
+            }
+            .purchase{
+                display:relative;
+                grid-column: 2;
+                grid-row: -1;
             }
             }
         }
@@ -224,6 +234,8 @@ $Csucess:hsl(104, 73%, 29%);
     display: flex;
     flex-direction: column;
     justify-content: center;
+    background: $P3color;
+
 }
 .sideDrawer li {
     margin: 0.5rem 0;
@@ -265,7 +277,7 @@ $Csucess:hsl(104, 73%, 29%);
     right:0%;
 }
 .toolBarLogo a{
-    color:white;
+    color:$P2color;
     text-decoration: none;
     font-size: 2rem;
 }
@@ -283,13 +295,13 @@ $Csucess:hsl(104, 73%, 29%);
     padding: 0 0.5rem;
 }
 .toolBarNavItems a{
-    color:white;
+    color:$P2color;
     text-decoration: none;
 }
 
 .toolBarNavItems a:hover,
 .toolBarNavItems a:active {
-    color: #fa923f;
+    color: $Cdanger;
 }
 
 @media (max-width: 4000px){
