--- a/my-app/src/CSS/my.scss
+++ b/my-app/src/CSS/my.scss
@@ -2,6 +2,8 @@
 *{
     margin: 0;
     padding: 0;
+    font-family:'Cormorant SC',serif;
+    font-size: 1.02rem;
 }
 //---------------------varibles
 $Pcolor: hsl(72, 100%, 97%)	;
@@ -39,8 +41,8 @@ $Csucess:hsl(104, 73%, 29%);
         font-family:'Cormorant SC',serif;
     }
     .subTitle {
-        margin-top: -4em;
-        font-size: .9em;
+        margin-top: -4rem;
+        font-size: .9rem;
         font-family:'Indie Flower', cursive;
 
     }
@@ -61,6 +63,7 @@ $Csucess:hsl(104, 73%, 29%);
             grid-auto-rows: 40px;
             grid-template-columns: 10px 1fr 1fr 1fr 10px;
             grid-gap: 2rem;
+            padding: 1rem;
 
             .button {
                 background-color: $Csucess;
@@ -125,6 +128,7 @@ $Csucess:hsl(104, 73%, 29%);
         text-decoration: none;
         grid-column: 3/4;
         list-style-type:none;
+        padding: 1rem;
         li{
             left: 0%;
             text-decoration: none;
@@ -218,6 +222,7 @@ $Csucess:hsl(104, 73%, 29%);
             li{
                 grid-column: 2/-1;
                 grid-row: auto;
+                padding: 1rem;
             }
             }
             .purchase{
@@ -292,12 +297,15 @@ $Csucess:hsl(104, 73%, 29%);
 .toolBarLogo{
     position: absolute;
     text-align: center;
-    right:0%;
+    right:3%;
+    word-spacing: -.2rem;
+
 }
 .toolBarLogo a{
     color:$P2color;
     text-decoration: none;
-    font-size: 2rem;
+    font-size: 2rem; 
+    word-spacing: -.2rem;
 }
 .spacer {
     flex:1;
@@ -331,7 +339,7 @@ $Csucess:hsl(104, 73%, 29%);
     @media(min-width:340px){
         .toolBarLogo a{
          font-size: 4vw;
-         word-spacing:1vw ;
+         word-spacing:-.4vw ;
          text-align: center;
         }
     }
